checkpatch: ignore EMAIL_SUBJECT

--- a/.checkpatch.conf
+++ b/.checkpatch.conf
@@ -32,6 +32,7 @@
 --ignore COMMIT_MESSAGE
 --ignore BAD_SIGN_OFF
 --ignore UNKNOWN_COMMIT_ID
+--ignore EMAIL_SUBJECT
 --exclude src/jtag/drivers/libjaylink
 --exclude tools/git2cl
 --exclude .gitlab
